--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "astrotiles",
   "type": "module",
   "version": "0.0.1",
+  "types": "module",
+  "imports": {
+    "#assets/*": "./src/assets/*",
+    "#components/*": "./src/components/*",
+    "#widgets/*": "./src/components/widgets/*",
+    "#content/*": "./src/content/*",
+    "#layouts/*": "./src/layouts/*",
+    "#lib/*": "./src/lib/*",
+    "#styles/*": "./src/styles/*",
+    "#*": "./src/*"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +20,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.3"
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.3",
+    "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
