--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
+    "clsx": "^2.1.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tailwind-merge": "^2.5.5"
   }
 }
