--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwind-merge": "^2.5.5"
   }
 }
