--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "astro": "^5.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "clsx": "^2.1.1",
