--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "#assets/*": "./src/assets/*",
     "#components/*": "./src/components/*",
     "#constants/*": "./src/constants/*",
+    "#ui/*": "./src/components/ui/*",
     "#widgets/*": "./src/components/widgets/*",
     "#content/*": "./src/content/*",
     "#hooks/*": "./src/hooks/*",
@@ -24,12 +25,18 @@
   "dependencies": {
     "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "astro": "^5.0.3",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
