update path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,17 @@
     "jsxImportSource": "react",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@components/*": ["./src/components/*"],
+      "@constants/*": ["./src/constants/*"],
+      "@ui/*": ["./src/components/ui/*"],
+      "@widgets/*": ["./src/components/widgets/*"],
+      "@content/*": ["./src/content/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@layouts/*": ["./src/layouts/*"],
+      "@lib/*": ["./src/lib/*"],
+      "@styles/*": ["./src/styles/*"]
     }
   }
 }
