--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-201e55d-20241215",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
