--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
     "@typescript-eslint/parser": "^8.18.1",
     "clsx": "^2.1.1",
