--- a/package.json
+++ b/package.json
@@ -1,49 +1,33 @@
 {
-  "name": "playground-v1",
-  "type": "module",
-  "version": "0.0.1",
-  "types": "module",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "format": "prettier --write . --ignore-path .gitignore",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "fix": "prettier --write . --ignore-path .gitignore && eslint --fix"
-  },
-  "dependencies": {
-    "@astrojs/react": "^4.1.2",
-    "@astrojs/tailwind": "^5.1.4",
-    "@types/react": "^18.3.14",
-    "@types/react-dom": "^18.3.2",
-    "astro": "^5.1.1",
-    "class-variance-authority": "^0.7.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.16",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@eslint/compat": "^1.2.4",
-    "@eslint/js": "^9.17.0",
-    "@typescript-eslint/parser": "^8.18.1",
-    "clsx": "^2.1.1",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "globals": "^15.14.0",
-    "prettier": "3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwind-merge": "^2.5.5",
-    "typescript-eslint": "^8.18.1"
-  }
+	"name": "playground-v1",
+	"type": "module",
+	"version": "0.0.1",
+	"types": "module",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"format": "prettier --write . --ignore-path .gitignore",
+		"lint": "biome format",
+		"lint:fix": "biome format --write"
+	},
+	"dependencies": {
+		"@astrojs/react": "^4.1.2",
+		"@astrojs/tailwind": "^5.1.4",
+		"@types/react": "^18.3.14",
+		"@types/react-dom": "^18.3.2",
+		"astro": "^5.1.1",
+		"class-variance-authority": "^0.7.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwindcss": "^3.4.16",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^2.5.5"
+	}
 }
