--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
 		"react-dom": "^19.0.0",
 		"tailwindcss": "^3.4.16",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.24.1"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"zod": "^3.24.1",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.5.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4"
 	}
 }
