--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
 		"@types/react-dom": "^18.3.2",
 		"astro": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"tailwind-merge": "^2.5.5",
 		"tailwindcss": "^3.4.16",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.24.1",
-		"clsx": "^2.1.1",
-		"tailwind-merge": "^2.5.5"
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4"
