--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,17 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"nursery": {
+				"useSortedClasses": {
+					"level": "warn",
+					"options": {
+						"attributes": ["classList"],
+						"functions": ["clsx", "cva", "tw", "tw.*", "cn"]
+					},
+					"fix": "safe"
+				}
+			}
 		}
 	},
 	"javascript": {
