--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-compiler": "^19.0.0-beta-55955c9-20241229",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
