--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write . --ignore-path .gitignore",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
+    "lint:inspect": "eslint --inspect-config",
     "fix": "prettier --write . --ignore-path .gitignore && eslint --fix"
   },
   "dependencies": {
