--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "playground-v1",
+  "name": "playground",
   "type": "module",
   "version": "0.0.1",
-  "types": "module",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -25,21 +24,19 @@
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.16",
-    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "eslint": "^9.17.0",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-55955c9-20241229",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
