--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write . --ignore-path .gitignore",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "lint:inspect": "eslint --inspect-config",
-    "fix": "prettier --write . --ignore-path .gitignore && eslint --fix"
+    "format:check": "prettier --check ./src",
+    "format::write": "prettier --write ./src"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.2",
@@ -31,19 +31,13 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
-    "@typescript-eslint/parser": "^8.19.0",
-    "eslint": "^9.17.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-55955c9-20241229",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.1"
   }
 }
