--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "lint:inspect": "eslint --inspect-config",
-    "format:check": "prettier --check ./src",
-    "format::write": "prettier --write ./src"
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.2",
@@ -32,7 +31,6 @@
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
     "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
