--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
+    "@preact/signals-react-transform": "^0.5.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
