--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
     "@preact/signals-react-transform": "^0.5.1",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
