--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "lint:inspect": "eslint --inspect-config",
-    "format": "prettier --write ./src",
+    "format": "prettier . --write",
+    "fix": "prettier --write . && eslint --fix .",
     "test": "vitest"
   },
   "dependencies": {
