--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@eslint/js": "^9.17.0",
     "@preact/signals-react-transform": "^0.5.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
