--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
     "@preact/signals-react-transform": "^0.5.1",
+    "babel-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-astro": "^1.3.1",
