--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.17.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "babel-plugin-react-compiler": "19.0.0-beta-decd7b8-20250118",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
@@ -45,6 +47,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.17",
     "typescript-eslint": "^8.19.1",
     "vitest": "^3.0.0-beta.4"
   },
