--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@astrojs/react": "^4.1.2",
+    "@astrojs/react": "^4.1.6",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
+    "@jpotin/mosaic-maker": "^1.0.0",
+    "@jpotin/playground-ui": "^0.1.6",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.1.2",
@@ -27,7 +28,6 @@
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -48,6 +48,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^4.0.0",
     "typescript-eslint": "^8.19.1",
     "vitest": "^3.0.0-beta.4"
   },
