--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "prebuild": "rm -rf dist",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -19,8 +20,6 @@
     "@astrojs/sitemap": "^3.2.1",
     "@jpotin/mosaic-maker": "^1.0.2",
     "@jpotin/playground-ui": "^1.0.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
     "astro": "^5.1.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +30,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.0",
